--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
 @import "tailwindcss";
 @theme{
   --font-inter: "Inter" ;
+  --font-karan: "Karantina" ;
+}
+
+body{
+  padding: 0;
+  margin: 0;
+  background-color: black;
+}
+
+html, body {
+  overflow-x: hidden; 
+  width: 100vw; 
+}
+
+
+#root {
+  overflow-x: hidden;
 }
