--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,14 @@ html, body {
 #root {
   overflow-x: hidden;
 }
+
+@keyframes fadeIn {
+  from {
+  transform: translateY(200px);
+  }
+
+}
+
+.animate-fadeIn {
+  animation: fadeIn 1.5s ease-out;
+}
